compiler/src/test/resources/golden/errors/derive_unknown_trait.dawn
type Color = | Red | Green derive Eq

pub fn main() -> Unit !io = println("x")
